[package]
name = "rust_discord_minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "minesweeper",
]

[dependencies]
minesweeper = { path = "minesweeper" }
konst = { version = "0.3.5", default-features = false, features = ["parsing"] }
eyre = "0.6.8"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
